--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                     Every moment with you is a cherished memory, much like the beautiful photos you love to capture. I wanted to create something unique, combining my passion for technology with your love for photography, to show you just how special you are to me.<br><br>
                     This little journey, filled with puzzles and hidden clues, is a small token of my affection and the fun we always have together. You inspire me every day with your creativity and your wonderful spirit. I hope this gift brings a smile to your face, as big as the one you bring to mine.<br><br>
                     With all my love,<br>
-                    Smit Chotai
+                    I can't Write my Name(.... .....)
                 </p>
                 <!-- Decorative elements -->
                 <div class="absolute -bottom-10 -right-10 w-40 h-40 bg-pink-300 opacity-20 rounded-full blur-xl"></div>
